--- a/about.html
+++ b/about.html
@@ -26,7 +26,6 @@
           <li><a href="contact.html">Contactos</a></li>
         </ul>
       </nav>
-
     </div>
   </header>
   <!-- Section A: info -->
@@ -36,40 +35,68 @@
       <div class="bottom-line"></div>
       <p class="lead">"Please allow me to introduce myself..."</p>
       <div class="about-info">
-        <img src="./img/mauricio_pics/mau_profile.jpg" alt="mauricio profile pic" class="bio-image">
+        <img src="./img/mauricio_pics/mau_profile.jpg" alt="mauricio profile pic" class="bio-image" />
         <div class="bio bg-light">
-          <h4 class="py-1">Estar aqui y en el ahora. que la musica esta en todo lo bueno</h4>
-          <p>Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show
-            to the people who make shows, and on the strength of that one show they decide if they're going to make more
-            shows. Some pilots get picked and become television programs. Some don't, become nothing. She starred in one
-            of the ones that became nothing. </p>
-
-          <p>Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most
-            popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes
+          <h4 class="py-1">
+            Estar aqui y en el ahora. que la musica esta en todo lo bueno
+          </h4>
+          <p>
+            Estudié la carrera de Iniciación Profesional en Percusiones en el
+            INBA, mientras se complementaban con varios maestros particulares.
+            Empecé a dedicarme a la música profesionalmente desde el año 2000.
+            Gracias a la música, he podido pisar escenarios en E.U, Europa y
+            centro y sur América. Prácticamente he tocado en escenarios de
+            TODA la república. También he tenido la oportunidad de producir y
+            organizar conciertos, desde la logística hasta lo completamente
+            musical, entendiendo así las necesidades tanto del interprete como
+            del que escucha.
           </p>
 
+          <p>
+            La música es un aprendizaje que no termina y es siempre importante
+            un trabajo en equipo. Por fortuna, he podido tocar siempre con
+            músicos comprometidos con su profesión y con ellos mismos, de tal
+            manera que el enriquecimiento de conocimiento siempre ha sido
+            positivo y reciproco. Me he especializado en rock clásico, pero
+            también he podido descubrir otros generos que complementan el
+            estudio del instrumento y por supuesto de la música misma. La idea
+            de las clases es poder compartir estas aventuras en la música y en
+            una de sus partes más importantes, el ritmo. El ritmo es esa parte
+            de la música que practicamente se encuentra en nosotros.
+          </p>
         </div>
         <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
         <div class="award-1">
-          <img src="./img/mauricio_pics/drumstick.png" class="fas-image" alt="drumstick logo">
-          <h3>Award One</h3>
-          <p>There are only two mistakes one can make along the road to truth; not going all the way, and not starting.
+          <img src="./img/mauricio_pics/drumstick.png" class="fas-image" alt="drumstick logo" />
+          <h3>Experiencia</h3>
+          <p>
+            Más de 20 años tocando profesionalmente en escenarios nacionales e
+            internacionales.
           </p>
         </div>
         <div class="award-2">
-          <img src="./img/mauricio_pics/drumstick.png" class="fas-image" alt="drumstick logo">
-          <h3>Award Two</h3>
-          <p>Health is the greatest gift, contentment the greatest wealth, faithfulness the best relationship.</p>
+          <img src="./img/mauricio_pics/drumstick.png" class="fas-image" alt="drumstick logo" />
+          <h3>Reconocimiento</h3>
+          <p>
+            Representante de México en the Beatles Fest en UK. Fundador de
+            Apple Scruffs, único tributo a George Harrison en México.
+          </p>
         </div>
         <div class="award-3">
-          <img src="./img/mauricio_pics/drumstick.png" class="fas-image" alt="drumstick logo">
-          <h3>Award Three</h3>
-          <p>An insincere and evil friend is more to be feared than a wild beast; a wild beast may wound your body, but
-            an evil friend will wound your mind.</p>
+          <img src="./img/mauricio_pics/drumstick.png" class="fas-image" alt="drumstick logo" />
+          <h3>Versatilidad</h3>
+          <p>
+            Colaborador en más de diez proyectos, y bandas de diversos
+            géneros. Rock Clásico, Jazz, Latin, Pop, Danza, Performance,
+            Indie, Alternativo y mucho más.
+          </p>
         </div>
         <!-- favicon legend -->
-        <div class="favicon my-1">Icons made by <a href="https://www.flaticon.com/authors/freepik"
-            title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+        <div class="favicon my-1">
+          Icons made by
+          <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>
+          from
+          <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
         </div>
       </div>
     </div>
@@ -81,39 +108,39 @@
       <div class="bottom-line"></div>
       <h4>Bateria:</h4>
       <div class="progress">
-        <div style="width:90%"></div>
+        <div style="width: 90%;"></div>
       </div>
       <h4>Percusion:</h4>
       <div class="progress">
-        <div style="width:80%"></div>
+        <div style="width: 80%;"></div>
       </div>
       <h4>Voz:</h4>
       <div class="progress">
-        <div style="width:75%"></div>
+        <div style="width: 75%;"></div>
       </div>
       <h4>Guitarra:</h4>
       <div class="progress">
-        <div style="width:50%"></div>
+        <div style="width: 50%;"></div>
       </div>
       <h4>Beatles:</h4>
       <div class="progress">
-        <div style="width:95%"></div>
+        <div style="width: 95%;"></div>
       </div>
       <h4>Pop:</h4>
       <div class="progress">
-        <div style="width:90%"></div>
+        <div style="width: 90%;"></div>
       </div>
       <h4>Rock/Alternativo:</h4>
       <div class="progress">
-        <div style="width:80%"></div>
+        <div style="width: 80%;"></div>
       </div>
       <h4>Latin:</h4>
       <div class="progress">
-        <div style="width:70%"></div>
+        <div style="width: 70%;"></div>
       </div>
       <h4>Otros Generos:</h4>
       <div class="progress">
-        <div style="width:50%"></div>
+        <div style="width: 50%;"></div>
       </div>
     </div>
   </section>
@@ -123,14 +150,17 @@
     <div class="container">
       <h2 class="section-title">Colaboraciones y Proyectos</h2>
       <div class="about-logos">
-        <a href="https://www.facebook.com/applescruffs.mx/" target="_blank"> <img
-            src="img/mauricio_pics/applescruffs_logo.png" alt="Apple Scruffs Band Logo"></a>
+        <a href="https://www.facebook.com/applescruffs.mx/" target="_blank">
+          <img src="img/mauricio_pics/applescruffs_logo.png" alt="Apple Scruffs Band Logo" /></a>
+
         <a href="https://www.facebook.com/thedavidbejashow/" target="_blank"><img src="img/mauricio_pics/davidbeja.png"
-            alt="David Beja Band Logo"></a>
+            alt="David Beja Band Logo" /></a>
+
         <a href="https://www.youtube.com/watch?v=MF83sice7BU" target="_blank"><img
-            src="img/mauricio_pics/morsa_drum.png" alt="Morsa Band Logo"></a>
+            src="img/mauricio_pics/morsa_drum.png" alt="Morsa Band Logo" /></a>
+
         <a href="https://www.youtube.com/watch?v=oW6Zj6zQTAY" target="_blank"><img src="img/mauricio_pics/sirbabel.png"
-            alt="Sir Babel Logo"></a>
+            alt="Sir Babel Logo" /></a>
       </div>
     </div>
   </section>
@@ -143,42 +173,60 @@
       <p class="lead text-center">"Ahi te hablan, Mau!...."</p>
       <div class="testimonials">
         <div>
-          <p>Mi Sobrino Mauricio, ha rebasado todos los niveles del ritmo y la voz. Desde pequeño, ha mostrado un enorme
-            talento y un apego por seguir mis pasos
-            con precisión. Artista cumplidor, que te aguanta una peda, mejor que nadie.
+          <p>
+            Mi Sobrino Mauricio, ha rebasado todos los niveles del ritmo y la
+            voz. Desde pequeño, ha mostrado un enorme talento y un apego por
+            seguir mis pasos con precisión. Artista cumplidor, que te aguanta
+            una peda, mejor que nadie.
           </p>
           <ul>
-            <li><img src="./img/mauricio_pics/phil.jpg" alt="Brill Collins"></li>
+            <li>
+              <img src="./img/mauricio_pics/phil.jpg" alt="Brill Collins" />
+            </li>
             <li>Phil Colinas, Baterista y Cantante</li>
           </ul>
         </div>
         <div>
-          <p> Es un orgullo nacional, lo que los muchachos de Apple Scruffs han presentado, de la obra y carrera del
-            gran George Harrison, versiones muy
-            interesantes, muy fieles y también tocadas con mucho Respeto.
+          <p>
+            Es un orgullo nacional, lo que los muchachos de Apple Scruffs han
+            presentado, de la obra y carrera del gran George Harrison,
+            versiones muy interesantes, muy fieles y también tocadas con mucho
+            Respeto.
           </p>
           <ul>
-            <li><img src="./img/mauricio_pics/manuel_guerrero.jpg" alt="Manuel Guerrero"></li>
-            <li>Manuel Guerrero, Locutor de "La Hora Beatles" en Universal Stereo</li>
+            <li>
+              <img src="./img/mauricio_pics/manuel_guerrero.jpg" alt="Manuel Guerrero" />
+            </li>
+            <li>
+              Manuel Guerrero, Locutor de "La Hora Beatles" en Universal
+              Stereo
+            </li>
           </ul>
         </div>
         <div>
-          <p>Mauricio Rosas es un excelente baterista y un gran maestro. Me ayudo a tener un ritmo firme y contundente.
-            Una y otra, y otra vez. El no paraba,me exigia el 100 en el escenario.
-            Además es un demonio en las sábanas</p>
+          <p>
+            Mauricio Rosas es un excelente baterista y un gran maestro. Me
+            ayudo a tener un ritmo firme y contundente. Una y otra, y otra
+            vez. El no paraba,me exigia el 100 en el escenario. Además es un
+            demonio en las sábanas
+          </p>
           <ul>
-            <li><img src="./img/mauricio_pics/sasha.jpg" alt="Sasha Gris"></li>
+            <li>
+              <img src="./img/mauricio_pics/sasha.jpg" alt="Sasha Gris" />
+            </li>
             <li>Sacha Gris, Modelo, DJ y artista indie</li>
           </ul>
         </div>
         <div>
-          <p>Yo a Mau, le he aprendido mucho. Al chile toca bien cabrón! En este negocio de la "Beatlemania", hay que
-            sonar a lo que es. No parecido.
-            Eso, es lo que tiene Mauricio. De otra forma, queda uno sólo como un imitador de cuarta.
+          <p>
+            Mauricio, truly you are one of the most solid incredible Beatle drummers I have had the pleasure of
+            performing with!, YOU ARE BEYOND GREAT. I hope we get to work together again in the future.
           </p>
           <ul>
-            <li><img src="./img/mauricio_pics/ringer-star.jpg" alt="Ringer star"></li>
-            <li>Ringer Estrella, Imitador de Ringo Starr</li>
+            <li>
+              <img src="./img/mauricio_pics/ringer-star.jpg" alt="Ringer star" />
+            </li>
+            <li>Ringer Star, Reconocido Imitador de Ringo Starr</li>
           </ul>
         </div>
       </div>
@@ -201,11 +249,10 @@
       </div>
       <div id="eddie-logo">
         <div class="eddie-item">Website By</div>
-        <img src="./img/Logo De Lara rev2.png" alt="De Lara Engineering Logo">
+        <img src="./img/Logo De Lara rev2.png" alt="De Lara Engineering Logo" />
       </div>
     </div>
   </footer>
-
 </body>
 
 </html>
