--- a/courses.html
+++ b/courses.html
@@ -37,37 +37,34 @@
       <p class="lead">Actualmente andamos ofreciendo los siguientes cursos...</p>
       <div class="classes-info">
         <!-- class 1 -->
-        <img src="img/mauricio_pics/bermix-studio-3_koU-nHQpE-unsplash.jpg" alt="online classes pic" class="class-pic1">
+        <img src="img/mauricio_pics/mau_top.jpg" alt="online classes pic" class="class-pic1">
         <div class="class-info1 bg-light">
-          <h4 class="py-1 text-center">Clases en linea</h4>
+          <h4 class="py-1 text-center">Clases en linea o Presenciales</h4>
           <div class="bottom-line"></div>
-          <div class="class-location">Varias Ciudades</div>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus corrupti magni tenetur sunt veritatis quo at
-            aut eaque reprehenderit perferendis debitis provident recusandae perspiciatis eligendi iste accusamus, qui
-            vero ex, fuga quas totam! Aspernatur, expedita, minus nobis voluptatum beatae reprehenderit suscipit sed
-            iure, natus obcaecati autem quod modi at sequi!</p>
+          <div class="class-location">Varias Ciudades/CDMX</div>
+          <p>En las clases podrás entender los aspectos básicos para descubrir al baterista que llevas dentro. Poder
+            acompañar o sacar una canción ya sea de manera similar o con tu propio toque. También revisaremos ritmos
+            básicos de varios géneros para que puedas acompañar desde una balada hasta una cumbia.</p>
         </div>
         <!-- class 2 -->
         <div class="class-info2 bg-medium">
-          <h4 class="py-1 text-center">Bateria</h4>
+          <h4 class="py-1 text-center">Toca Ringo</h4>
           <div class="bottom-line"></div>
-          <div class="class-location">Ciudad de Mexico</div>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, laudantium. Error laudantium accusantium
-            libero similique nesciunt aspernatur consequatur. Recusandae deleniti modi porro natus cupiditate sapiente
-            aliquam rerum eum sit! Ratione dolore illum molestias non fuga animi quaerat eveniet maiores alias
-            reprehenderit aliquid voluptatem magnam maxime nobis at, perferendis dolores necessitatibus?.</p>
+          <div class="class-location">CDMX</div>
+          <p>Si eres del gusto de la música de los "FAB FOUR", el curso especializado en música de The Beatles es para
+            ti. Analizaremos voces, armonías, apreciación musical y por supuesto los secretos de la música del cuarteto
+            desde los tambores. Todo esto, gracias a la experiencia en bandas tributo y festivales nacionales e
+            internacionales en los que he tenido la oportunidad de participar.</p>
         </div>
-        <img src="img/mauricio_pics/mau_top.jpg" alt="online classes pic" class="class-pic2">
+        <img src="img/mauricio_pics/ringoclass.jpg" alt="online classes pic" class="class-pic2">
         <!-- class 3 -->
         <img src="img/mauricio_pics/mau_back.jpg" alt="online classes pic" class="class-pic3">
         <div class="class-info3 bg-dark">
           <h4 class="py-1 text-center">Ensamble y Ejecuccion</h4>
           <div class="bottom-line"></div>
-          <div class="class-location">Ciudad de Mexico</div>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus corrupti magni tenetur sunt veritatis quo at
-            aut eaque reprehenderit perferendis debitis provident recusandae perspiciatis eligendi iste accusamus, qui
-            vero ex, fuga quas totam! Aspernatur, expedita, minus nobis voluptatum beatae reprehenderit suscipit sed
-            iure, natus obcaecati autem quod modi at sequi!</p>
+          <div class="class-location">CDMX</div>
+          <p>Si tienes una banda y a veces no suena como quisieras, aquí podemos ayudarte. Es un coaching sencillo de
+            los aspectos básicos que deben existir en una banda para que puedas llegar a sonar como tú quieres.</p>
         </div>
 
       </div>
