--- a/index.html
+++ b/index.html
@@ -54,36 +54,40 @@
                     <i class="fas fa-drum fa-2x"></i>
                     <h3>Bateria y Percussion</h3>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Recusandae repudiandae velit vel iste? Saepe ea laboriosam modi
-                        aspernatur inventore nemo.
+                        La bateria y percusión son mi especialidad y mi vida. Puedo enseñar, tocar o colaborar
+                        en cualquier tipo de género o proyecto. No importa el arreglo de bateria o percusión.
                     </p>
                 </div>
                 <div>
                     <i class="fas fa-file-audio fa-2x"></i>
                     <h3>Grabación</h3>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Recusandae repudiandae velit vel iste? Saepe ea laboriosam modi
-                        aspernatur inventore nemo.
+                        He participado en diversas ocasiones como músico de sesion y grabación para muchas bandas y
+                        proyectos.
+                        He grabado percussiones, bateria, voz y coros. Siempre estoy disponible, para ayudar y hacer
+                        crecer el sonido
+                        de cualquier proyecto que tengas.
                     </p>
                 </div>
                 <div>
                     <i class="fas fa-user-graduate fa-2x"></i>
                     <h3>Cursos</h3>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Recusandae repudiandae velit vel iste? Saepe ea laboriosam modi
-                        aspernatur inventore nemo.
+                        Me apasiona transmitir mi amor por el
+                        ritmo, la música y la bateria
+                        He dado clases por más de diez años, con alumnos de todo tipo de niveles y gustos. Me enfoco en
+                        lograr un excelente sonido, amor por la música y satisfacción de mis estudiantes.
                     </p>
                 </div>
                 <div>
                     <i class="fas fa-music fa-2x"></i>
                     <h3>Eventos y Colaboraciones</h3>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Recusandae repudiandae velit vel iste? Saepe ea laboriosam modi
-                        aspernatur inventore nemo.
+                        Mas de 20 años tocando en todo tipo de proyectos, escenarios y generos. Escena nacional e
+                        internacional.
+                        Estoy disponible para contrataciones, músico suplente, gira o organizacion de eventos y
+                        toquines.
+
                     </p>
                 </div>
             </div>
@@ -130,7 +134,7 @@
             <div class="bottom-line"></div>
             <p class="lead">
                 Todos mis cursos, sesiones de estudio y colaboracion. Se centran en
-                la musica en vivo y el sonido ¨fiel¨ de la obra Mi objetivo siempre
+                la música en vivo y el sonido ¨fiel¨ de la obra Mi objetivo siempre
                 ha sido sonar y enseñar a sonar, a lo que se escucha y no a algo
                 ¨parecido¨. Abordo cada pieza y proyecto con el total respeto y
                 homenaje a sus autores. La perfección es mi harmonia.
@@ -142,8 +146,8 @@
                     </i>
 
                     <h3>Estudio y Analisis</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae architecto amet unde
-                        voluptatem laborum delectus?</p>
+                    <p>No importa la clase, colaboracion o grabación.Mi sello y compromiso es estudiar, sentir y dominar
+                        el sonido del proyecto</p>
                 </div>
                 <div>
                     <i class="fas fa-palette fa-4x process-icon my-2">
@@ -151,8 +155,10 @@
                     </i>
 
                     <h3>Personalizacion</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae architecto amet unde
-                        voluptatem laborum delectus?</p>
+                    <p>Mi enfoque es, que tanto mis alumnos como mis colaboradores. Se hagan uno con la musica. Que
+                        suenen y reciban de mi
+                        trabajo lo que ellos quieren escuchar.
+                    </p>
                 </div>
                 <div>
                     <i class="fas fa-cogs fa-4x process-icon my-2">
@@ -160,8 +166,10 @@
                     </i>
 
                     <h3>Tecnica</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae architecto amet unde
-                        voluptatem laborum delectus?</p>
+                    <p>La música es un aprendizaje interminable. Mi metodo es profesional. Y con la tecnica y trabajo
+                        correcto
+                        para lograr un sonido, limpio, claro y preciso.
+                    </p>
                 </div>
                 <div>
                     <i class="fas fa-grin-hearts fa-4x process-icon my-2">
@@ -169,8 +177,8 @@
                     </i>
 
                     <h3>Satisfaccion</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae architecto amet unde
-                        voluptatem laborum delectus?</p>
+                    <p>Todo mi trabajo siempre deja un profundo amor y satisfacción. Se da con la pasión y el
+                        100% de compromiso, porque así lo merece la música y mis clientes.</p>
                 </div>
             </div>
 
