--- a/about.html
+++ b/about.html
@@ -174,16 +174,16 @@
       <div class="testimonials">
         <div>
           <p>
-            Mi Sobrino Mauricio, ha rebasado todos los niveles del ritmo y la
-            voz. Desde pequeño, ha mostrado un enorme talento y un apego por
-            seguir mis pasos con precisión. Artista cumplidor, que te aguanta
-            una peda, mejor que nadie.
+            El haber contado con Mauricio en la batería del Grupo Morsa fue altamente gratificante: aportando aire
+            fresco, nuevos bríos con su talento en bateria, guitarra y voz. Nos dió una gran versatilidad en el grupo.
+            Excelente profesionalismo y entrega para la música. Me siento honrado y agradecido de contarme entre sus
+            amigos
           </p>
           <ul>
             <li>
-              <img src="./img/mauricio_pics/phil.jpg" alt="Brill Collins" />
+              <img src="./img/testimonials/victor.jpg" alt="Brill Collins" />
             </li>
-            <li>Phil Colinas, Baterista y Cantante</li>
+            <li>Victor Rosas, Fundador y Director de Grupo Morsa</li>
           </ul>
         </div>
         <div>
@@ -195,7 +195,7 @@
           </p>
           <ul>
             <li>
-              <img src="./img/mauricio_pics/manuel_guerrero.jpg" alt="Manuel Guerrero" />
+              <img src="./img/testimonials/manuel_guerrero.jpg" alt="Manuel Guerrero" />
             </li>
             <li>
               Manuel Guerrero, Locutor de "La Hora Beatles" en Universal
@@ -205,17 +205,17 @@
         </div>
         <div>
           <p>
-            Mauricio Rosas es un excelente baterista y un gran maestro. Me
-            ayudo a tener un ritmo firme y contundente. Una y otra, y otra
-            vez. El no paraba,me exigia el 100 en el escenario. Además es un
-            demonio en las sábanas
-          </p>
-          <ul>
-            <li>
-              <img src="./img/mauricio_pics/sasha.jpg" alt="Sasha Gris" />
-            </li>
-            <li>Sacha Gris, Modelo, DJ y artista indie</li>
-          </ul>
+            Mauricio Rosas (Morice pa los cuates) Llegó a nosotros altamente recomendado, como percusionista, para un
+            proyecto bohemio, de absoluta improvisación. Nos llevamos una tremenda sorpresa:
+            "Morice" siempre profesional, estuvo dispuesto a tocar hasta que le sangraran las manos. Colaboramos casi 2
+            años en ese proyecto. Donde también, nos asistió con voz y excelentes coros. Persona disciplinada y con
+            gran sentido de la logística de este negocio.
+            <ul>
+              <li>
+                <img src="./img/testimonials/Amantes-31.jpg" alt="Kazz Amantes de Lola" />
+              </li>
+              <li>Kazz, Fundador y Director de Los Amantes De Lola.</li>
+            </ul>
         </div>
         <div>
           <p>
@@ -224,7 +224,7 @@
           </p>
           <ul>
             <li>
-              <img src="./img/mauricio_pics/ringer-star.jpg" alt="Ringer star" />
+              <img src="./img/testimonials/ringer-star.jpg" alt="Ringer star" />
             </li>
             <li>Ringer Star, Reconocido Imitador de Ringo Starr</li>
           </ul>
