--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 ["Baterista","Cursos","Beatlemania","Grabación","Eventos"]'></span>
                 </h1>
                 <p class="lead">
-                    Me especializo en la musica del "Cuarteto de Liverpool", Clases de
-                    Bateria y mas
+                    Me especializo en la música del "Cuarteto de Liverpool", Clases de
+                    Batería y más
                 </p>
                 <a href="work.html" class="btn-light">Conoce mi trabajo</a>
             </div>
@@ -46,25 +46,25 @@
             <h2 class="section-title">Me Especializo En</h2>
             <div class="bottom-line"></div>
             <p class="lead">
-                El sonido y bateria de "The Beatles", Clases personalizadas y Bateria
+                El sonido y batería de "The Beatles", Clases personalizadas y Batería
                 profesional de cualquier genero
             </p>
             <div class="specials">
                 <div>
                     <i class="fas fa-drum fa-2x"></i>
-                    <h3>Bateria y Percussion</h3>
+                    <h3>Bateria y Percusión</h3>
                     <p>
-                        La bateria y percusión son mi especialidad y mi vida. Puedo enseñar, tocar o colaborar
-                        en cualquier tipo de género o proyecto. No importa el arreglo de bateria o percusión.
+                        La batería y percusión son mi especialidad y mi vida. Puedo enseñar, tocar o colaborar
+                        en cualquier tipo de género o proyecto. No importa el arreglo de batería o percusión.
                     </p>
                 </div>
                 <div>
                     <i class="fas fa-file-audio fa-2x"></i>
                     <h3>Grabación</h3>
                     <p>
-                        He participado en diversas ocasiones como músico de sesion y grabación para muchas bandas y
+                        He participado, en diversas ocasiones, como músico de sesión y grabación para muchas bandas y
                         proyectos.
-                        He grabado percussiones, bateria, voz y coros. Siempre estoy disponible, para ayudar y hacer
+                        He grabado percusiones, batería, voz y coros. Siempre estoy disponible, para ayudar y hacer
                         crecer el sonido
                         de cualquier proyecto que tengas.
                     </p>
@@ -74,7 +74,7 @@
                     <h3>Cursos</h3>
                     <p>
                         Me apasiona transmitir mi amor por el
-                        ritmo, la música y la bateria
+                        ritmo, la música y la batería.
                         He dado clases por más de diez años, con alumnos de todo tipo de niveles y gustos. Me enfoco en
                         lograr un excelente sonido, amor por la música y satisfacción de mis estudiantes.
                     </p>
@@ -83,10 +83,10 @@
                     <i class="fas fa-music fa-2x"></i>
                     <h3>Eventos y Colaboraciones</h3>
                     <p>
-                        Mas de 20 años tocando en todo tipo de proyectos, escenarios y generos. Escena nacional e
+                        Más de 20 años tocando en todo tipo de proyectos, escenarios y géneros. Escena nacional e
                         internacional.
-                        Estoy disponible para contrataciones, músico suplente, gira o organizacion de eventos y
-                        toquines.
+                        Estoy disponible para contrataciones, músico suplente, gira o organización de eventos y
+                        "toquines".
 
                     </p>
                 </div>
@@ -133,9 +133,9 @@
             <h2 class="section-title">Mi Proceso</h2>
             <div class="bottom-line"></div>
             <p class="lead">
-                Todos mis cursos, sesiones de estudio y colaboracion. Se centran en
-                la música en vivo y el sonido ¨fiel¨ de la obra Mi objetivo siempre
-                ha sido sonar y enseñar a sonar, a lo que se escucha y no a algo
+                Todos mis cursos, sesiones de estudio y colaboración: Se centran en
+                la música en vivo y el sonido ¨fiel¨ de la obra. Mi objetivo siempre
+                ha sido sonar, y enseñar a sonar, a lo que se escucha y no a algo
                 ¨parecido¨. Abordo cada pieza y proyecto con el total respeto y
                 homenaje a sus autores. La perfección es mi harmonia.
             </p>
@@ -146,7 +146,7 @@
                     </i>
 
                     <h3>Estudio y Analisis</h3>
-                    <p>No importa la clase, colaboracion o grabación.Mi sello y compromiso es estudiar, sentir y dominar
+                    <p>No importa la clase, colaboración o grabación.Mi sello y compromiso es estudiar, sentir y dominar
                         el sonido del proyecto</p>
                 </div>
                 <div>
@@ -154,8 +154,8 @@
                         <div class="process-step">2</div>
                     </i>
 
-                    <h3>Personalizacion</h3>
-                    <p>Mi enfoque es, que tanto mis alumnos como mis colaboradores. Se hagan uno con la musica. Que
+                    <h3>Personalización</h3>
+                    <p>Mi enfoque es, que tanto mis alumnos como mis colaboradores, se hagan uno con la música. Que
                         suenen y reciban de mi
                         trabajo lo que ellos quieren escuchar.
                     </p>
@@ -165,10 +165,10 @@
                         <div class="process-step">3</div>
                     </i>
 
-                    <h3>Tecnica</h3>
-                    <p>La música es un aprendizaje interminable. Mi metodo es profesional. Y con la tecnica y trabajo
+                    <h3>Técnica</h3>
+                    <p>La música es un aprendizaje interminable. Mi método es profesional. Y con la técnica y trabajo
                         correcto
-                        para lograr un sonido, limpio, claro y preciso.
+                        para lograr un sonido limpio, claro y preciso.
                     </p>
                 </div>
                 <div>
@@ -176,7 +176,7 @@
                         <div class="process-step">4</div>
                     </i>
 
-                    <h3>Satisfaccion</h3>
+                    <h3>Satisfacción</h3>
                     <p>Todo mi trabajo siempre deja un profundo amor y satisfacción. Se da con la pasión y el
                         100% de compromiso, porque así lo merece la música y mis clientes.</p>
                 </div>
