Updated Testimonials. Rev5

--- a/about.html
+++ b/about.html
@@ -174,48 +174,44 @@
       <div class="testimonials">
         <div>
           <p>
-            El haber contado con Mauricio en la batería del Grupo Morsa fue altamente gratificante: aportando aire
-            fresco, nuevos bríos con su talento en bateria, guitarra y voz. Nos dió una gran versatilidad en el grupo.
-            Excelente profesionalismo y entrega para la música. Me siento honrado y agradecido de contarme entre sus
-            amigos
+            El haber contado con Mauricio en la batería del Grupo Morsa fue altamente gratificante. Aportó nuevos bríos
+            con su talento en la batería y voz, incluso alguna vez en la guitarra, lo cual dio gran versatilidad en el
+            grupo. Excelente profesionalismo y entrega para la música. Me siento honrado y agradecido de contarme entre
+            sus amigos.
           </p>
           <ul>
             <li>
               <img src="./img/testimonials/victor.jpg" alt="Brill Collins" />
             </li>
-            <li>Victor Rosas, Fundador y Director de Grupo Morsa</li>
+            <li>Victor Rosas, fundador y director musical de Grupo Morsa</li>
           </ul>
         </div>
         <div>
           <p>
-            Es un orgullo nacional, lo que los muchachos de Apple Scruffs han
-            presentado, de la obra y carrera del gran George Harrison,
-            versiones muy interesantes, muy fieles y también tocadas con mucho
-            Respeto.
+            Es un orgullo nacional lo que los muchachos de Apple Scruffs han presentado. Versiones interesantes y fieles
+            a la obra del beatle místico, George Harrison. Tocado siempre con mucho respeto y único en México.
           </p>
           <ul>
             <li>
               <img src="./img/testimonials/manuel_guerrero.jpg" alt="Manuel Guerrero" />
             </li>
             <li>
-              Manuel Guerrero, Locutor de "La Hora Beatles" en Universal
-              Stereo
+              Manuel Guerrero, locutor de "La Hora de Los Beatles" en Universal Stereo.
             </li>
           </ul>
         </div>
         <div>
           <p>
-            Mauricio Rosas (Morice pa los cuates) Llegó a nosotros altamente recomendado, como percusionista, para un
-            proyecto bohemio, de absoluta improvisación. Nos llevamos una tremenda sorpresa:
-            "Morice" siempre profesional, estuvo dispuesto a tocar hasta que le sangraran las manos. Colaboramos casi 2
-            años en ese proyecto. Donde también, nos asistió con voz y excelentes coros. Persona disciplinada y con
-            gran sentido de la logística de este negocio.
-            <ul>
-              <li>
-                <img src="./img/testimonials/Amantes-31.jpg" alt="Kazz Amantes de Lola" />
-              </li>
-              <li>Kazz, Fundador y Director de Los Amantes De Lola.</li>
-            </ul>
+            Mauricio Rosas (Morice para los cuates), llegó a nosotros altamente recomendado como percusionista para un
+            proyecto bohemio de absoluta improvisación. "Morice", siempre profesional, estuvo dispuesto a tocar hasta
+            que le sangraran las manos. Colaboramos casi dos años en este proyecto,donde también, nos asistió con voz y
+            excelentes coros. Persona disciplinada y con gran sentido de la logística de este negocio.</p>
+          <ul>
+            <li>
+              <img src="./img/testimonials/Amantes-31.jpg" alt="Kazz Amantes de Lola" />
+            </li>
+            <li>Kazz, fundador y director de Los Amantes De Lola.</li>
+          </ul>
         </div>
         <div>
           <p>
@@ -226,7 +222,7 @@
             <li>
               <img src="./img/testimonials/ringer-star.jpg" alt="Ringer star" />
             </li>
-            <li>Ringer Star, Reconocido Imitador de Ringo Starr</li>
+            <li>Ringer Star, reconocido imitador de Ringo Starr</li>
           </ul>
         </div>
       </div>
