--- a/contact.html
+++ b/contact.html
@@ -33,9 +33,9 @@
   <!-- Section A: Contact Form -->
   <section id="contact-a" class="text-center py-3">
     <div class="container">
-      <h2 class="section-title">Contactame</h2>
+      <h2 class="section-title">Contáctame</h2>
       <div class="bottom-line"></div>
-      <p class="lead">Aqui me puedes escribir</p>
+      <p class="lead">Aquí me puedes escribir</p>
       <form method="POST" data-netlify-recaptcha="true" data-netlify="true">
         <div class="text-fields">
           <input name="name" type="text" class="text-input name-input" placeholder="Nombre" />
@@ -70,8 +70,8 @@
         </div>
         <div>
           <i class="fas fa-address-card fa-2x"></i>
-          <h3>Direccion</h3>
-          <p>Playa Revolcadero 246, Col.Reforma Iztlacihuatl. CDMX</p>
+          <h3>Dirección</h3>
+          <p>CDMX. México</p>
         </div>
       </div>
     </div>
