--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
                     <h3>Estudio y Analisis</h3>
                     <p>No importa la clase, colaboración o grabación.Mi sello y compromiso es estudiar, sentir y dominar
-                        el sonido del proyecto</p>
+                        el sonido del proyecto.</p>
                 </div>
                 <div>
                     <i class="fas fa-palette fa-4x process-icon my-2">
